@@ -1,3 +1,7 @@
+2006-02-17 Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* slabdisp.cpp: Use 45 degree cut.
+
 2006-02-10 Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* slaboverlap.h: Numerical overlap of off-axis modes.
